# MNN_yolov11Seg_x86_arm64

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  build.sh
fast_python_test/: yolov11_mnn_test.py
src/InferMNN/: mnnInfer.cpp  mnnInfer.h
src/yolo_seg/: YOLOv11SegInference.cpp  YOLOv11SegInference.h
test/: test_YOLOv11Seg.cpp
